Fix IE search button alignment

--- a/sites/all/themes/pul_base/assets/source/styles/components/search/_search--quicktabs.scss
+++ b/sites/all/themes/pul_base/assets/source/styles/components/search/_search--quicktabs.scss
@@ -145,6 +145,7 @@
     color: $black;
     float: left;
     font-family: $font-primary; // height: 45px;
+    line-height: normal;
     margin: 0;
     padding: 20px;
     position: absolute;
